build_web_verify.txt
warning: unused import: `anyhow::Result`
 --> crates\core\src\state.rs:2:5
  |
2 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `deve_core` (lib) generated 1 warning (run `cargo fix --lib -p deve_core` to apply 1 suggestion)
   Compiling deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
error[E0583]: file not found for module `editor`
 --> apps\web\src\app.rs:1:1
  |
1 | mod editor;
  | ^^^^^^^^^^^
  |
  = help: to create the module `editor`, create file "apps\web\src\app\editor.rs" or "apps\web\src\app\editor\mod.rs"
  = note: if there is a `mod editor` elsewhere in the crate already, import it with `use crate::...` instead

error: cannot find attribute `component` in this scope
 --> apps\web\src\app.rs:4:3
  |
4 | #[component]
  |   ^^^^^^^^^
  |
help: consider importing one of these attribute macros
  |
2 + use crate::component;
  |
2 + use leptos::component;
  |

error: cannot find macro `view` in this scope
 --> apps\web\src\app.rs:6:5
  |
6 |     view! {
  |     ^^^^
  |
help: consider importing one of these macros
  |
2 + use crate::view;
  |
2 + use leptos::view;
  |

error[E0405]: cannot find trait `IntoView` in this scope
 --> apps\web\src\app.rs:5:22
  |
5 | pub fn App() -> impl IntoView {
  |                      ^^^^^^^^ not found in this scope
  |
help: consider importing one of these traits
  |
2 + use crate::IntoView;
  |
2 + use leptos::IntoView;
  |

Some errors have detailed explanations: E0405, E0583.
For more information about an error, try `rustc --explain E0405`.
error: could not compile `deve_web` (bin "deve_web") due to 4 previous errors
